fixed spelling mistakes

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Exploratory data analysis\n",
     "\n",
-    "I would like to see the typical lenght of the marvin keyword from the dataset to better inform the audio buffer length used in real-time classification."
+    "I would like to see the typical length of the marvin keyword from the dataset to better inform the audio buffer length used in real-time classification."
    ]
   },
   {
@@ -84,7 +84,7 @@
    "source": [
     "## Distribution of the length marvin in dataset\n",
     "\n",
-    "There seems to be a normal distribution superimposed with some samples having a length of nearly 16000 values (1s) "
+    "There seems to be a normal distribution superimposed with samples of higher length some having nearly 16000 in length (1s) "
    ]
   },
   {
@@ -129,7 +129,7 @@
    "source": [
     "## Inspecting a random subset of samples with high length\n",
     "\n",
-    "Precisely samples above 15900 in length. As seen in the plots below it can be attributed to background noise. Some fault samples have also been identified.  "
+    "Precisely samples above 15900 in length are inspected. As seen in the plots below it can be attributed to background noise. Some faulty samples have also been identified.  "
    ]
   },
   {
