adding changes to reflect AudioDataGenerator renaming

--- a/03-training-base-model.ipynb
+++ b/03-training-base-model.ipynb
@@ -60,7 +60,8 @@
     "VAL_BATCH_SIZE=8\n",
     "IMG_WIDTH=43\n",
     "IMG_HEIGHT=99\n",
-    "NOISE_FLOOR=0.1"
+    "NOISE_FLOOR=0.1\n",
+    "BACKGROUND_VOLUME=0.1"
    ]
   },
   {
@@ -89,9 +90,8 @@
     "                                 noise_floor=NOISE_FLOOR,\n",
     "                                 target=TARGET_WORD,\n",
     "                                 batch_size=BATCH_SIZE,\n",
-    "                                 training=True,\n",
-    "                                 augment=False,\n",
-    "                                 dynamic_sampling=False)\n",
+    "                                 background_volume=BACKGROUND_VOLUME,\n",
+    "                                 training=True)\n",
     "\n",
     "datagen_val=AudioDataGenerator(filenames=split_data['val'],\n",
     "                               classes=classes,\n",
@@ -99,8 +99,8 @@
     "                               noise_floor=NOISE_FLOOR,\n",
     "                               target=TARGET_WORD,\n",
     "                               batch_size=VAL_BATCH_SIZE,\n",
-    "                               training=False,\n",
-    "                               augment=False)"
+    "                               background_volume=BACKGROUND_VOLUME,\n",
+    "                               training=False)"
    ]
   },
   {
