--- a/04-training-DDDA-model.ipynb
+++ b/04-training-DDDA-model.ipynb
@@ -29,7 +29,7 @@
     "from tensorflow.keras.layers import Dense, Conv2D, Flatten, Dropout, MaxPooling2D\n",
     "\n",
     "#from local package \n",
-    "from modules.data_preprocessing import DataGenerator\n"
+    "from modules.data_preprocessing import AudioDataGenerator\n"
    ]
   },
   {
@@ -55,6 +55,7 @@
     "IMG_WIDTH=43\n",
     "IMG_HEIGHT=99\n",
     "NOISE_FLOOR=0.1\n",
+    "BACKGROUND_VOLUME=0.1\n",
     "\n",
     "keras.utils.set_random_seed(SEED)"
    ]
@@ -88,21 +89,23 @@
     "\n",
     "\n",
     "#Initializing custom data generator that augments the dataset.\n",
-    "datagen_train=DataGenerator(filenames=split_data['train'],\n",
-    "                            classes=classes,\n",
-    "                            data_folder=SPEECH_DATA,\n",
-    "                            noise_floor=NOISE_FLOOR,\n",
-    "                            target=TARGET_WORD,\n",
-    "                            batch_size=BATCH_SIZE,\n",
-    "                            training=True)\n",
+    "datagen_train=AudioDataGenerator(filenames=split_data['train'],\n",
+    "                                 classes=classes,\n",
+    "                                 data_folder=SPEECH_DATA,\n",
+    "                                 noise_floor=NOISE_FLOOR,\n",
+    "                                 target=TARGET_WORD,\n",
+    "                                 batch_size=BATCH_SIZE,\n",
+    "                                 background_volume=BACKGROUND_VOLUME,\n",
+    "                                 training=True)\n",
     "\n",
-    "datagen_val=DataGenerator(filenames=split_data['val'],\n",
-    "                          classes=classes,\n",
-    "                          data_folder=SPEECH_DATA,\n",
-    "                          noise_floor=NOISE_FLOOR,\n",
-    "                          target=TARGET_WORD,\n",
-    "                          batch_size=VAL_BATCH_SIZE,\n",
-    "                          training=False)"
+    "datagen_val=AudioDataGenerator(filenames=split_data['val'],\n",
+    "                               classes=classes,\n",
+    "                               data_folder=SPEECH_DATA,\n",
+    "                               noise_floor=NOISE_FLOOR,\n",
+    "                               target=TARGET_WORD,\n",
+    "                               batch_size=VAL_BATCH_SIZE,\n",
+    "                               background_volume=BACKGROUND_VOLUME,\n",
+    "                               training=False)"
    ]
   },
   {
